refactor(*): set minimum java version to JDK 11 (#27)
Add toolchain and change minimum JDK version to 11